EL-80 validation msg spacing fix

--- a/app/design/frontend/Earthlite/base/Magento_Catalog/web/css/source/_pdp_extend.less
+++ b/app/design/frontend/Earthlite/base/Magento_Catalog/web/css/source/_pdp_extend.less
@@ -55,6 +55,11 @@
         }
     }
 
+    .custom-options-container .mage-error {
+        margin-top: -10px !important;
+        margin-bottom: 10px;
+    }
+
     .configslide-open {
         overflow: hidden !important;
         .custom-options-container.slide {
@@ -614,7 +619,7 @@
     .has-configslide .page-footer {
         padding-bottom: 50px
     }
-    
+
     .product-add-form .custom.action {
         position: fixed;
         bottom: 0;
@@ -625,10 +630,10 @@
         .action {
             border-radius: 0;
             width: 100%;
-            
+
         }
     }
-    
+
     .product {
         &.info {
             &.detailed {
